wp-content/themes/academyAfrica/assets/css/src/components/_header.scss
@use '../abstracts/' as *;

.header {
    width: 100vw;
    background-color: $color-primary-700;
    padding: 20px;
    color: $color-shades-white;
    position: sticky;
    z-index: 9999;
    top: 0;

    .mobile {
        @include media-breakpoint-up(desktop) {
            display: none;
        }

        .nav {
            display: flex;
            justify-content: space-between;
            flex-direction: row;
            align-items: center;

            .hamburger {
                display: flex;
                font-size: 24px;
            }

            .logo {
                display: flex;
                align-items: center;
                justify-content: center;
                gap: 20px;

                .image {
                    img {
                        width: 39px;
                        height: 39px;
                    }
                }

                .site_name {
                    font-size: 18px;
                    font-weight: 700;

                    a {
                        color: $color-shades-white;
                    }
                }
            }

            .search {
                .icon {
                    font-size: 24px;
                }
            }
        }
    }

    .desktop {
        @include media-breakpoint-down(desktop) {
            display: none;
        }

        .nav {
            display: flex;
            justify-content: space-between;
            padding: 0 20px;
            flex-direction: row;

            .logo {
                display: flex;
                align-items: center;
                justify-content: center;
                gap: 20px;

                .image {
                    img {
                        width: 52px;
                        height: 52px;
                    }
                }

                .site_name {
                    font-size: 18px;
                    font-weight: 600;

                    a {
                        color: $color-shades-white;
                    }
                }
            }

            .search {
                display: flex;
                align-items: center;
                justify-content: center;

                .input {
                    display: flex;
                    align-items: center;
                    justify-content: center;

                    input {
                        width: 330px;
                        height: 40px;
                        border: none;
                        border-radius: 0;
                        padding: 0 20px;
                        outline: none;
                    }

                    button {
                        background: $color-primary-50;
                        color: $color-shades-white;
                        .icon {
                            color: $color-primary-700;
                        }

                        &:hover {
                            background: $color-primary-50;
                            color: $color-shades-white;
                            border: none;
                        }
                    }
                }
            }

            .menu {
                display: flex;
                align-items: center;
                justify-content: center;
                gap: 20px;

                .items {
                    display: flex;
                    flex-direction: row;
                    align-items: center;
                    justify-content: center;
                    gap: 20px;

                    .item {
                        font-size: 18px;
                        font-weight: 600;
                        text-transform: capitalize;
                        color: $color-shades-white;
                        cursor: pointer;

                        &.parent {
                            position: relative;
                            .collapsible {
                                display: flex;
                                flex-direction: row;
                                justify-content: space-between;
                                align-items: center;
                                gap: 6px;

                                .icons {
                                    display: flex;
                                    .icon {
                                        margin: 0;
                                    }
                                }
                            }

                            .children {
                                display: none;
                                position: absolute;
                                top: 100%;
                                left: 0;
                                width: 100%;
                                background: $color-primary-700;
                                color: $color-shades-white;

                                &.open {
                                    display: flex;
                                    flex-direction: column;
                                }

                                .item {
                                    display: flex;
                                    flex-direction: column;
                                    align-items: start;
                                    padding: 20px 0;
                                    border: 1px solid $color-primary-700;
                                    color: $color-primary-700;
                                    background: $color-shades-white;

                                    &:last-child {
                                        border-top: none;
                                    }

                                    &:hover {
                                        background: $color-primary-50;
                                    }
                                }
                            }
                        }
                    }
                }
            }

        }
    }
}


.drawer {
    display: none;
    width: 100vw;
    background-color: $color-primary-700;
    color: $color-shades-white;

    &.open {
        display: flex;
    }

    .menu {
        color: $color-shades-white;
        width: 100vw;

        .items {
            display: flex;
            flex-direction: column;

            .item {
                display: flex;
                flex-direction: column;
                align-items: start;
                align-self: stretch;
                padding: 20px;
                background: $color-primary-700;
                box-shadow: 0px 1px 0px 0px #E2E8F0;
                border: 0.5px solid $color-shades-white;
                text-transform: uppercase;
                cursor: pointer;
                color: $color-shades-white;

                &.parent {
                    padding: 0;
                    padding-bottom: 0;

                    .collapsible {
                        padding: 20px;
                        display: flex;
                        flex-direction: row;
                        justify-content: space-between;
                        align-items: center;
                        width: 100%;
                        gap: 20px;

                        .icon {
                            font-size: 24px;
                            color: $color-shades-white;
                        }
                    }

                    .children {
                        display: none;
                        flex-direction: column;
                        width: 100%;
                        background: $color-shades-white;

                        &.open {
                            display: flex;
                        }

                        .item {
                            background: $color-shades-white;
                            width: 100%;
                            border: none;
                            border-bottom: 1px solid $color-primary-700;
                            color: $color-primary-700;

                            &:last-child {
                                border-bottom: none;
                            }

                            &:hover {
                                background: $color-primary-50;
                            }
                        }
                    }
                }
            }
        }
    }
}

.mobile-search {
    display: none;
    padding: 20px;
    background: $color-primary-50;
    width: 100%;

    &.open {
        display: block;
    }

    .input {
        display: flex;
        justify-content: space-between;
        align-items: center;

        .search-btn {
            border: none;
            background: $color-primary-700;
            color: $color-shades-white;
            padding: 10px;
            border-radius: 0;
            cursor: pointer;
            width: 44px;
        }

        input {
            width: 100%;
            height: 40px;
            border: none;
            border-radius: 0;
            padding: 0 20px;
            outline: none;
            color: $color-neutral-700;
            font-style: italic;
            font-weight: 400;
            font-size: 14px;
        }

        .search-close-btn {
            border: none;
            background: $color-primary-50;
            color: $color-primary-700;
            padding: 10px;
            border-radius: 0;
            cursor: pointer;
            width: 44px;


            i {
                font-size: 24px;
                color: $color-primary-700;
            }
        }

    }
}

